<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AutoClockInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_address"
            app:layout_constraintBottom_toBottomOf="@+id/tv_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_address" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_work_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_in_time"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_work_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_start_work_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_off_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_in_time_after_work"
            app:layout_constraintBottom_toBottomOf="@+id/tv_off_work_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_off_work_time" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:barrierMargin="10dp"
            app:constraint_referenced_ids="tv_address_label, tv_work_time_label, tv_off_time_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            app:drawableEndCompat="@drawable/baseline_location_on_24"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/barrier_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_start_work_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            app:drawableEndCompat="@drawable/baseline_timer_24"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/barrier_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_off_work_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            app:drawableEndCompat="@drawable/baseline_timer_24"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/barrier_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_work_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_off_work_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>